# st_weather

./: .gitignore  README.md  generate_data.py  pyproject.toml  requirements.txt  st_app.py  temperature_data.csv
