[project]
name = "py-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "GuskovArA",email = "GuskovArA@mosreg.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "pyowm (>=3.3.0,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
